--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,34 @@
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+body {
+  background: lightblue;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.foodList {
-    color: red;
-    border: 1px solid gray;
-    padding: 10px;
+.food_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.foodList-header {
-    color: blue;
+.food_list {
+  background: whitesmoke;
+  width: 20%;
+  border: 1px solid gray;
+  padding: 10px;
+  margin: 5px;
+}
+
+
+.food_list h2 {
+  font-weight: bold;
+  color: rgb(34, 72, 129)
+}
+
+.food_list img {
+  width: 100%;
+  height: auto;
+}
+
+.ingredients {
+  font-size: .5em;
+  text-transform: lowercase;
 }
